# openapi-spec

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  INSTALL.md  MCP_SETUP.md  QUICKSTART.md  README.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  demo.py  docker-compose.yml  docker_mcp.sh  fastmcp.json  install_mcp.bat  install_mcp.sh  mcp_server.py  pyproject.toml  requirements.txt  setup.sh  test_api.py
.github/workflows/: ci.yml
openapi_generator/: cli.py  config.py  orchestrator.py
openapi_generator/extractors/: auth_detector.py  content.py  discovery.py  llm_extractor.py  renderer.py
openapi_generator/generators/: openapi_builder.py
openapi_generator/models/: schemas.py
openapi_generator/utils/: cache.py  logger.py  query_filter.py  robots.py
openapi_generator/validators/: coverage.py  spec_validator.py
tests/integration/: test_full_pipeline.py  test_mcp_server.py
tests/unit/: test_auth_detector.py  test_cache.py  test_models.py  test_openapi_builder.py  test_query_filter.py
